Revision history for libeio

TODO: maybe add mincore support? available on at leats darwin, solaris, linux, freebsd

1.0
	- added msync, mtouch support (untested).
        - added sync_file_range (untested).
        - fixed custom support.
        - use a more robust feed-add detection method.
	- "outbundled" from IO::AIO.
