@@ -3,6 +3,7 @@ Revision history for libeio
 TODO: maybe add mincore support? available on at leats darwin, solaris, linux, freebsd
 
 1.0
+	- added EIO_STACKSIZE.
 	- added msync, mtouch support (untested).
         - added sync_file_range (untested).
         - fixed custom support.
